test: melhorias nos testes de integracao